--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "configure:supabase": "node scripts/setup-supabase-env.mjs"
   },
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
