--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.546.0",
     "next": "14.2.33",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "openai": "^6.5.0",
     "react": "^18",
     "react-dom": "^18",
