--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "configure:supabase": "node scripts/setup-supabase-env.mjs"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.1",
