--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
+    "seed": "tsx scripts/seed.ts",
     "configure:supabase": "node scripts/setup-supabase-env.mjs"
   },
   "dependencies": {
@@ -51,6 +52,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "5.9.3"
   }
 }
