chore: add npm scripts for AI analysis setup and deployment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "test": "jest --watch",
     "seed": "tsx scripts/seed.ts",
-    "configure:supabase": "node scripts/setup-supabase-env.mjs"
+    "configure:supabase": "node scripts/setup-supabase-env.mjs",
+    "setup:ai-analysis": "tsx scripts/setup-ai-analysis.ts",
+    "deploy:edge-function": "tsx scripts/deploy-edge-function.ts",
+    "test:api-endpoint": "tsx scripts/test-api-endpoint.ts"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
