--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "test:api-endpoint": "tsx scripts/test-api-endpoint.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.53",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
+    "ai": "^5.0.76",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
