--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "14.2.33",
