--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build",
     "test": "jest --watch",
     "seed": "tsx scripts/seed.ts",
     "configure:supabase": "node scripts/setup-supabase-env.mjs",
@@ -53,6 +54,7 @@
     "@types/react": "18.3.26",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.33",
     "jest": "^30.2.0",
