--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "configure:supabase": "node scripts/setup-supabase-env.mjs",
     "setup:ai-analysis": "tsx scripts/setup-ai-analysis.ts",
     "deploy:edge-function": "tsx scripts/deploy-edge-function.ts",
-    "test:api-endpoint": "tsx scripts/test-api-endpoint.ts"
+    "test:api-endpoint": "tsx scripts/test-api-endpoint.ts",
+    "update-to-pro": "tsx scripts/update-user-to-pro.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.53",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "14.2.33",
